--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,24 @@ PORT=4000
 JWT_SECRET=um-segredo-bem-grande-e-unico-para-sua-api
 
 # MySQL (USUÁRIOS)
+# - Opção 1: URL completa (Railway/PlanetScale etc.)
+# MYSQL_URL=mysql://user:pass@host:3306/aula_backend_uniso
+# MYSQL_SSL=false
+
+# - Opção 2: Variáveis separadas (suporte a nomes do Railway)
 MYSQL_HOST=localhost
+MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=admin
 MYSQL_DATABASE=aula_backend_uniso
+
+# Alternativos (Railway e afins) — opcionais, se seu provedor definir estes nomes:
+# MYSQL_PUBLIC_URL=
+# MYSQLDATABASE=
+# MYSQLHOST=
+# MYSQLPORT=
+# MYSQLUSER=
+# MYSQLPASSWORD=
 
 # SQLite (NOTAS FISCAIS)
 SQLITE_FILE=./notas.db
